fix itext and isvg vertical alignment

--- a/mallet/samples.html
+++ b/mallet/samples.html
@@ -64,15 +64,9 @@ description: Theme samples.
                 </div>
                 <h1 class="hero">Theme samples</h1>
                 <h2>⚒️ Essential templates for any website</h2>
-                <nav class="mv"><b>Html</b><i class="icon"><i class="isvg">
-                      <svg viewBox="0 0 24 24">
-                        <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i><a href="/dove/mallet/home">Home</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/page">Page</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/post">Post</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/404">404</a>
+                <nav class="mv"><b>Html</b><i class="icon"><i class="itext">:</i></i><a href="/dove/mallet/home">Home</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/page">Page</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/post">Post</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/404">404</a>
                 </nav>
-                <nav class="mv"><b>Md</b><i class="icon"><i class="isvg">
-                      <svg viewBox="0 0 24 24">
-                        <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i><a href="/dove/mallet/md/home">Home</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/page">Page</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/post">Post</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/404">404</a>
+                <nav class="mv"><b>Md</b><i class="icon"><i class="itext">:</i></i><a href="/dove/mallet/md/home">Home</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/page">Page</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/post">Post</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/md/404">404</a>
                 </nav>
                 <div style="margin-top:3rem"></div>
                 <p><strong><a href="./preview">Preview the theme</a></strong> to see how it looks and <strong><a href="./#how-to-use">start using it</a></strong> today!
