--- a/core/index.html
+++ b/core/index.html
@@ -3,14 +3,14 @@ index: false
 layout: raw
 use_pug: true
 title: Core
-description: Minimal theme for your site.
+description: Basic theme for your site.
 ---
 <!DOCTYPE html>
 <html class="_core_layout no_js" lang="en-US">
 <!-- path        : core/index.html -->
 <!-- layout      : _source/_layouts/core -->
 <!-- title       : Core -->
-<!-- description : Minimal theme for your site. -->
+<!-- description : Basic theme for your site. -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -20,6 +20,23 @@ description: Minimal theme for your site.
     <meta id="_theme_color" name="theme-color" content="#222"/>
     <style>.isvg svg { width:1em;height:1em }</style>
     <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/core/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}"/>
+    <style>
+      ._article h1 { border:0;font-size:3em;font-weight:bold }
+      ._footer { margin-top:3rem }
+    </style>
+    <style>
+      ._article h2:first-of-type { padding-bottom:1.3em;margin-top:-0.7em }
+      ._article #icon {
+        position: absolute;
+        font-size:1em;
+        opacity:.2;
+        right:10em;
+        line-height:1;
+        z-index:-1;
+        top:5em;
+        scale:14;
+      }
+    </style>
 {% include layout_head.html %}
 <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
@@ -40,36 +57,18 @@ description: Minimal theme for your site.
           <main class="_main">
             <article class="_article">
               <div class="_layout">
-                <style>
-                  .hero_block { padding:1rem 2rem }
-                  .hero_block .hero-title { margin-top:1rem }
-                  .hero_block .hero-description { margin-left: 3.3rem; font-size: 1.1em; }
-                  .hero_block .hero-hr { margin-top:45px }
-                </style>
-                <div class="hero_block box">
-                  <h1 class="hero-title">💎 Core</h1>
-                  <p class="hero-description">Minimal theme for your site.</p>
-                </div>
-                <hr class="thin"/>
-                <nav class="mv"><b>Html</b><i class="icon"><i class="isvg">
-                      <svg viewBox="0 0 24 24">
-                        <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i><a href="/dove/core/home">Home</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/core/page">Page</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/core/post">Post</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/core/404">404</a>
-                </nav>
-                <hr class="thin"/>
-                <nav class="mv"><b>Markdown</b><i class="icon"><i class="isvg">
-                      <svg viewBox="0 0 24 24">
-                        <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i><a href="/dove/core/md/home">Home</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/core/md/page">Page</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/core/md/post">Post</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/core/md/404">404</a>
-                </nav>
-                <hr class="thin"/>
-                <nav class="mv"><a href="/dove/core/test_colors">Colors</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/core/test_code-blocks">Code blocks</a>
-                </nav>
+                <div class="relative">
+                  <div id="icon">💎</div>
+                </div>{%- capture about %}{%- include_relative README.md %}{%- endcapture %}
+{{ about | markdownify }}
               </div>
             </article>
           </main>
           <footer class="_footer">
             <div class="_layout">
+              <hr class="thin"/>
+              <nav class="_common_nav mv"><a href="/dove/core/">About</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/core/preview">Preview</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/core/samples">Samples</a>
+              </nav>
               <hr class="thin"/>
               <p class="text-right text-grey"><small>
                   This site is open source.
