--- a/mallet/test_code-blocks.html
+++ b/mallet/test_code-blocks.html
@@ -24,16 +24,16 @@ description: Code block samples.
 <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
-    <div class="_views">
-      <div class="_view _app __fadein">
-        <div class="_layout container-lg markdown-body">
+    <div class="_body_layout _layout">
+      <main class="_view">
+        <div class="_main_layout _layout container-lg markdown-body">
           <header class="_header">
-            <div class="_layout">
+            <div class="_layout _header_layout">
               <h1>{% include dove/logo.html name="mallet" %}</h1>
             </div>
           </header>
           <nav class="_nav">
-            <div class="_layout">
+            <div class="_layout _nav_layout">
               <nav class="mv"><a href="/dove/mallet/">About</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/preview">Preview</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/samples">Samples</a>
               </nav>
               <hr class="thin"/>
@@ -42,15 +42,13 @@ description: Code block samples.
               <hr class="thin"/>
             </div>
           </nav>
-          <main class="_main">
-            <article class="_article">
-              <div class="_layout">{%- capture code-blocks %}{%- include test_code-blocks.md %}{%- endcapture %}
+          <article class="_article">
+            <div class="_layout _article_layout">{%- capture code-blocks %}{%- include test_code-blocks.md %}{%- endcapture %}
 {{ code-blocks | markdownify }}
-              </div>
-            </article>
-          </main>
+            </div>
+          </article>
           <footer class="_footer">
-            <div class="_layout">
+            <div class="_layout _footer_layout">
               <hr class="thin"/>
               <nav class="_common_nav mv"><a href="/dove/mallet/test_colors">Colors</a><i class="icon"><i class="itext">&bull;</i></i><b>Code blocks</b>
               </nav>
@@ -64,13 +62,20 @@ description: Code block samples.
             </div>
           </footer>
         </div>
-      </div>
-      <div class="_view">
-        <div class="_layout">
+      </main>
+      <aside class="_view _topbar_view">
+        <div class="_topbar_layout _layout container-lg">
 {% include theme_switch.html %}
         </div>
-      </div>
+      </aside>
+      <aside class="_view _lowbar_view">
+        <div class="_lowbar_layout _layout container-lg">
+{% include copyright.html %}
+{% include credit.html %}
+        </div>
+      </aside>
 {% include layout_body.html %}
+      <script>((de=document.documentElement)=>de.className=de.className.replace('no_js','js'))();</script>
     </div>
   </body>
 </html>
