--- a/core/test_colors.html
+++ b/core/test_colors.html
@@ -24,16 +24,16 @@ description: Color samples.
 <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
-    <div class="_views">
-      <div class="_view">
-        <div class="_layout">
+    <div class="_body_layout _layout">
+      <main class="_view">
+        <div class="_layout _main_layout">
           <header class="_header">
-            <div class="_layout">
+            <div class="_layout _header_layout">
               <h1>{% include dove/logo.html name="core" %}</h1>
             </div>
           </header>
           <nav class="_nav">
-            <div class="_layout">
+            <div class="_layout _nav_layout">
               <nav class="mv"><a href="/dove/core/">About</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/core/preview">Preview</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/core/samples">Samples</a>
               </nav>
               <hr class="thin"/>
@@ -42,15 +42,13 @@ description: Color samples.
               <hr class="thin"/>
             </div>
           </nav>
-          <main class="_main">
-            <article class="_article">
-              <div class="_layout">{%- capture test %}{%- include test_colors.md %}{%- endcapture %}
+          <article class="_article">
+            <div class="_layout _article_layout">{%- capture test %}{%- include test_colors.md %}{%- endcapture %}
 {{ test | markdownify }}
-              </div>
-            </article>
-          </main>
+            </div>
+          </article>
           <footer class="_footer">
-            <div class="_layout">
+            <div class="_layout _footer_layout">
               <hr class="thin"/>
               <nav class="_common_nav mv"><b>Colors</b><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/core/test_code-blocks">Code blocks</a>
               </nav>
@@ -64,13 +62,20 @@ description: Color samples.
             </div>
           </footer>
         </div>
-      </div>
-      <div class="_view">
-        <div class="_layout">
+      </main>
+      <aside class="_view _topbar_view">
+        <div class="_layout _topbar_layout">
 {% include theme_switch.html %}
         </div>
-      </div>
+      </aside>
+      <aside class="_view _lowbar_view">
+        <div class="_layout _lowbar_layout">
+{% include copyright.html %}
+{% include credit.html %}
+        </div>
+      </aside>
 {% include layout_body.html %}
+      <script>((de=document.documentElement)=>de.className=de.className.replace('no_js','js'))();</script>
     </div>
   </body>
 </html>
