--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@ description: A theme development project.
 <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
-    <div class="_views">
-      <div class="_view">
-        <div class="_layout container-lg px-3 my-3 markdown-body">
+    <div class="_body_layout _layout">
+      <main class="_view">
+        <div class="_main_layout _layout container-lg px-3 my-3 markdown-body">
           <header class="_header">
-            <div class="_layout">
+            <div class="_layout _header_layout">
               <div class="relative">
                 <div id="icon">🕊️</div>
               </div>
@@ -55,71 +55,76 @@ description: A theme development project.
             </div>
           </header>
           <nav class="_nav">
-            <div class="_layout">{%- capture nav %}{%- include nav.md %}{%- endcapture %}
+            <div class="_layout _nav_layout">{%- capture nav %}{%- include nav.md %}{%- endcapture %}
 {{ nav | markdownify }}
             </div>
           </nav>
-          <main class="_main">
-            <article class="_article">
-              <div class="_layout">
-                <div class="flex" style="gap:3rem">
-                  <div class="fill" id="themes_">
-                    <h3 class="mt-0">Themes</h3>
-                    <p class="text-grey">We are working on the following themes.</p>
-                    <ul class="rapat">
-                      <li><b><a href="/dove/core/">Core</a></b><i class="icon"><i class="isvg">
-                            <svg viewBox="0 0 24 24">
-                              <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                            </svg></i></i><a href="/dove/core/preview">Preview</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/core/samples">Samples</a>
-                      </li>
-                      <li><b><a href="/dove/mallet/">Mallet</a></b><i class="icon"><i class="isvg">
-                            <svg viewBox="0 0 24 24">
-                              <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                            </svg></i></i><a href="/dove/mallet/preview">Preview</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/samples">Samples</a>
-                      </li>
-                      <li><b><a href="/dove/prime/">Prime</a></b><i class="icon"><i class="isvg">
-                            <svg viewBox="0 0 24 24">
-                              <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                            </svg></i></i><a href="/dove/prime/preview">Preview</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/samples">Samples</a>
-                      </li>
-                    </ul>
-                  </div>
+          <article class="_article">
+            <div class="_layout _article_layout">
+              <div class="flex" style="gap:3rem">
+                <div class="fill" id="themes_">
+                  <h3 class="mt-0">Themes</h3>
+                  <p class="text-grey">We are working on the following themes.</p>
+                  <ul class="rapat">
+                    <li><b><a href="/dove/core/">Core</a></b><i class="icon"><i class="isvg">
+                          <svg viewBox="0 0 24 24">
+                            <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                          </svg></i></i><a href="/dove/core/preview">Preview</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/core/samples">Samples</a>
+                    </li>
+                    <li><b><a href="/dove/mallet/">Mallet</a></b><i class="icon"><i class="isvg">
+                          <svg viewBox="0 0 24 24">
+                            <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                          </svg></i></i><a href="/dove/mallet/preview">Preview</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/samples">Samples</a>
+                    </li>
+                    <li><b><a href="/dove/prime/">Prime</a></b><i class="icon"><i class="isvg">
+                          <svg viewBox="0 0 24 24">
+                            <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                          </svg></i></i><a href="/dove/prime/preview">Preview</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/prime/samples">Samples</a>
+                    </li>
+                  </ul>
                 </div>
-                <hr class="thin"/>
-                <p class="text-grey">Development posts and pages.</p>{%- capture pages %}{% include pages.md exclude="" %}{%- endcapture %}{%- capture posts %}{% include posts.md exclude="" %}{%- endcapture %}
-                <div class="flex" style="gap:3rem">
-                  <div id="pages_" style="min-width:250px">
-                    <h3 class="mt-0">Pages</h3>{{ pages | markdownify }}
-                    <ul>
-                      <li><a href="404">404</a>
-                      </li>
-                    </ul>
-                  </div>
-                  <div id="posts_" style="min-width:250px">
-                    <h3 class="mt-0">Posts</h3>{{ posts | markdownify }}
-                  </div>
-                </div>
-                <hr class="thin"/>{%- if site.github.environment == 'development' -%}{%- capture nav_test %}{%- include dove/nav_test.md %}{%- endcapture %}
-{{ nav_test | markdownify }}
-                <hr class="thin"/>{%- endif %}
-                <h3>Configurations</h3>{%- capture config %}{%- include_relative config.md %}{%- endcapture %}
-{{ config | markdownify }}
               </div>
-            </article>
-          </main>
+              <hr class="thin"/>
+              <p class="text-grey">Development posts and pages.</p>{%- capture pages %}{% include pages.md exclude="" %}{%- endcapture %}{%- capture posts %}{% include posts.md exclude="" %}{%- endcapture %}
+              <div class="flex" style="gap:3rem">
+                <div id="pages_" style="min-width:250px">
+                  <h3 class="mt-0">Pages</h3>{{ pages | markdownify }}
+                  <ul>
+                    <li><a href="404">404</a>
+                    </li>
+                  </ul>
+                </div>
+                <div id="posts_" style="min-width:250px">
+                  <h3 class="mt-0">Posts</h3>{{ posts | markdownify }}
+                </div>
+              </div>
+              <hr class="thin"/>{%- if site.github.environment == 'undefined' -%}{%- capture nav_test %}{%- include dove/nav_test.md %}{%- endcapture %}
+{{ nav_test | markdownify }}
+              <hr class="thin"/>{%- endif %}
+              <h3>Configurations</h3>{%- capture config %}{%- include_relative config.md %}{%- endcapture %}
+{{ config | markdownify }}
+            </div>
+          </article>
           <footer class="_footer">
-            <div class="_layout">{%- capture footer %}{%- include footer.md %}{%- endcapture %}
+            <div class="_layout _footer_layout">{%- capture footer %}{%- include footer.md %}{%- endcapture %}
 {{ footer | markdownify }}
             </div>
           </footer>
         </div>
-      </div>
-      <div class="_view">
-        <div class="_layout">
+      </main>
+      <aside class="_view _topbar_view">
+        <div class="_topbar_layout _layout container-lg px-3">
 {% include theme_switch.html %}
         </div>
-      </div>
+      </aside>
+      <aside class="_view _lowbar_view">
+        <div class="_lowbar_layout _layout container-lg px-3">
+{% include copyright.html %}
+{% include credit.html %}
+        </div>
+      </aside>
 {% include layout_body.html %}
+      <script>((de=document.documentElement)=>de.className=de.className.replace('no_js','js'))();</script>
     </div>
   </body>
 </html>
