--- a/test_pug.html
+++ b/test_pug.html
@@ -25,43 +25,48 @@ description: Testing something here.
 <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
-    <div class="_views">
-      <div class="_view">
-        <div class="_layout container-lg px-3 my-3 markdown-body">
+    <div class="_body_layout _layout">
+      <main class="_view">
+        <div class="_main_layout _layout container-lg px-3 my-3 markdown-body">
           <header class="_header">
-            <div class="_layout">{%- capture header %}{%- include header.md %}{%- endcapture %}
+            <div class="_layout _header_layout">{%- capture header %}{%- include header.md %}{%- endcapture %}
 {{ header | markdownify }}
             </div>
           </header>
           <nav class="_nav">
-            <div class="_layout">{%- capture nav %}{%- include nav.md %}{%- endcapture %}
+            <div class="_layout _nav_layout">{%- capture nav %}{%- include nav.md %}{%- endcapture %}
 {{ nav | markdownify }}
             </div>
           </nav>
-          <main class="_main">
-            <article class="_article">
-              <div class="_layout">
-                {%-
-                  include 404.md
-                  title = "Sorry"
-                  description = "There is nothing to show here."
-                %}
-              </div>
-            </article>
-          </main>
+          <article class="_article">
+            <div class="_layout _article_layout">
+              {%-
+                include 404.md
+                title = "Sorry"
+                description = "There is nothing to show here."
+              %}
+            </div>
+          </article>
           <footer class="_footer">
-            <div class="_layout">{%- capture footer %}{%- include footer.md %}{%- endcapture %}
+            <div class="_layout _footer_layout">{%- capture footer %}{%- include footer.md %}{%- endcapture %}
 {{ footer | markdownify }}
             </div>
           </footer>
         </div>
-      </div>
-      <div class="_view">
-        <div class="_layout">
+      </main>
+      <aside class="_view _topbar_view">
+        <div class="_topbar_layout _layout container-lg px-3">
 {% include theme_switch.html %}
         </div>
-      </div>
+      </aside>
+      <aside class="_view _lowbar_view">
+        <div class="_lowbar_layout _layout container-lg px-3">
+{% include copyright.html %}
+{% include credit.html %}
+        </div>
+      </aside>
 {% include layout_body.html %}
+      <script>((de=document.documentElement)=>de.className=de.className.replace('no_js','js'))();</script>
     </div>
   </body>
 </html>
