--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@ description: A theme development project.
 <!DOCTYPE html>
 <html class="_prime_layout no_js" lang="en-US">
 <!-- path        : index.html -->
-<!-- layout      : _source/_layouts/prime -->
-<!-- title       : Dove -->
-<!-- description : A theme development project. -->
+<!-- layout      : {{ page.layout }} -->
+<!-- source      : _source/_layouts/prime.pug -->
+<!-- title       : {{ page.title | default: "(untitled)" }} -->
+<!-- description : {{ page.description | default: "(undescribed)" }} -->
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="{{ site.encoding | default: 'utf-8' }}"/>
 {% seo %}
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <meta id="_color_scheme" name="color-scheme" content="light dark"/>
-    <meta id="_theme_color" name="theme-color" content="#222"/>
+    <meta id="_theme_color" name="theme-color" content="{{ page.theme_color | default: site.theme_color | default: '' }}"/>
+    <meta id="_color_scheme" name="color-scheme" content="{{ page.color_scheme | default: site.color_scheme | default: 'light dark' }}"/>
     <style>.isvg svg { width:1em;height:1em }</style>
     <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/prime/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}"/>
     <style>
@@ -45,7 +46,7 @@ description: A theme development project.
   <body>
     <div class="_body_layout _layout">
       <main class="_view">
-        <div class="_main_layout _layout container-lg px-3 my-3 markdown-body">
+        <div class="_layout _main_layout container-lg px-3 my-3 markdown-body">
           <header class="_header">
             <div class="_layout _header_layout">
               <div class="relative">
@@ -55,8 +56,7 @@ description: A theme development project.
             </div>
           </header>
           <nav class="_nav">
-            <div class="_layout _nav_layout">{%- capture nav %}{%- include nav.md %}{%- endcapture %}
-{{ nav | markdownify }}
+            <div class="_layout _nav_layout">{%- capture nav %}{%- include nav.md %}{%- endcapture %}{{ nav | markdownify }}
             </div>
           </nav>
           <article class="_article">
@@ -98,27 +98,24 @@ description: A theme development project.
                   <h3 class="mt-0">Posts</h3>{{ posts | markdownify }}
                 </div>
               </div>
-              <hr class="thin"/>{%- if site.github.environment == 'undefined' -%}{%- capture nav_test %}{%- include dove/nav_test.md %}{%- endcapture %}
-{{ nav_test | markdownify }}
+              <hr class="thin"/>{%- if site.github.environment == 'development' -%}{%- capture nav_test %}{%- include dove/nav_test.md %}{%- endcapture %}{{ nav_test | markdownify }}
               <hr class="thin"/>{%- endif %}
-              <h3>Configurations</h3>{%- capture config %}{%- include_relative config.md %}{%- endcapture %}
-{{ config | markdownify }}
+              <h3>Configurations</h3>{%- capture config %}{%- include_relative config.md %}{%- endcapture %}{{ config | markdownify }}
             </div>
           </article>
           <footer class="_footer">
-            <div class="_layout _footer_layout">{%- capture footer %}{%- include footer.md %}{%- endcapture %}
-{{ footer | markdownify }}
+            <div class="_layout _footer_layout">{%- capture footer %}{%- include footer.md %}{%- endcapture %}{{ footer | markdownify }}
             </div>
           </footer>
         </div>
       </main>
       <aside class="_view _topbar_view">
-        <div class="_topbar_layout _layout container-lg px-3">
+        <div class="_layout _topbar_layout container-lg px-3">
 {% include theme_switch.html %}
         </div>
       </aside>
       <aside class="_view _lowbar_view">
-        <div class="_lowbar_layout _layout container-lg px-3">
+        <div class="_layout _lowbar_layout container-lg px-3">
 {% include copyright.html %}
 {% include credit.html %}
         </div>
