--- a/mallet/samples.html
+++ b/mallet/samples.html
@@ -8,16 +8,17 @@ description: Theme samples.
 <!DOCTYPE html>
 <html class="_mallet_layout no_js" lang="en-US">
 <!-- path        : mallet/samples.html -->
-<!-- layout      : _source/_layouts/mallet -->
-<!-- title       : Samples -->
-<!-- description : Theme samples. -->
+<!-- layout      : {{ page.layout }} -->
+<!-- source      : _source/_layouts/mallet.pug -->
+<!-- title       : {{ page.title | default: "(untitled)" }} -->
+<!-- description : {{ page.description | default: "(undescribed)" }} -->
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="{{ site.encoding | default: 'utf-8' }}"/>
 {% seo %}
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <meta id="_color_scheme" name="color-scheme" content="light dark"/>
-    <meta id="_theme_color" name="theme-color" content="#222"/>
+    <meta id="_theme_color" name="theme-color" content="{{ page.theme_color | default: site.theme_color | default: '' }}"/>
+    <meta id="_color_scheme" name="color-scheme" content="{{ page.color_scheme | default: site.color_scheme | default: 'light dark' }}"/>
     <style>.isvg svg { width:1em;height:1em }</style>
     <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/mallet/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}"/>
     <style>
@@ -73,7 +74,7 @@ description: Theme samples.
               </p>
               <hr class="thin"/>
               <nav class="mv"><a href="/dove/mallet/test_colors">Colors</a><i class="icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test_code-blocks">Code blocks</a>
-              </nav>{%- if site.github.environment == 'undefined' -%}
+              </nav>{%- if site.github.environment == 'development' -%}
               <hr class="thin"/>
               <nav class="mv"><a href="/dove/mallet/test">Test page</a>
               </nav>{%- endif %}
@@ -94,12 +95,12 @@ description: Theme samples.
         </div>
       </main>
       <aside class="_view _topbar_view">
-        <div class="_topbar_layout _layout container-lg">
+        <div class="_layout _topbar_layout container-lg">
 {% include theme_switch.html %}
         </div>
       </aside>
       <aside class="_view _lowbar_view">
-        <div class="_lowbar_layout _layout container-lg">
+        <div class="_layout _lowbar_layout container-lg">
 {% include copyright.html %}
 {% include credit.html %}
         </div>
