--- a/prime/test_code-blocks.html
+++ b/prime/test_code-blocks.html
@@ -8,16 +8,17 @@ description: Code block samples.
 <!DOCTYPE html>
 <html class="_prime_layout no_js" lang="en-US">
 <!-- path        : prime/test_code-blocks.html -->
-<!-- layout      : _source/_layouts/prime -->
-<!-- title       : Code blocks -->
-<!-- description : Code block samples. -->
+<!-- layout      : {{ page.layout }} -->
+<!-- source      : _source/_layouts/prime.pug -->
+<!-- title       : {{ page.title | default: "(untitled)" }} -->
+<!-- description : {{ page.description | default: "(undescribed)" }} -->
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="{{ site.encoding | default: 'utf-8' }}"/>
 {% seo %}
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <meta id="_color_scheme" name="color-scheme" content="light dark"/>
-    <meta id="_theme_color" name="theme-color" content="#222"/>
+    <meta id="_theme_color" name="theme-color" content="{{ page.theme_color | default: site.theme_color | default: '' }}"/>
+    <meta id="_color_scheme" name="color-scheme" content="{{ page.color_scheme | default: site.color_scheme | default: 'light dark' }}"/>
     <style>.isvg svg { width:1em;height:1em }</style>
     <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/prime/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}"/>
 {% include layout_head.html %}
@@ -26,7 +27,7 @@ description: Code block samples.
   <body>
     <div class="_body_layout _layout">
       <main class="_view">
-        <div class="_main_layout _layout container-lg px-3 my-3 markdown-body">
+        <div class="_layout _main_layout container-lg px-3 my-3 markdown-body">
           <header class="_header">
             <div class="_layout _header_layout">
               <h1>{% include dove/logo.html name="prime" %}</h1>
@@ -43,8 +44,7 @@ description: Code block samples.
             </div>
           </nav>
           <article class="_article">
-            <div class="_layout _article_layout">{%- capture code-blocks %}{%- include test_code-blocks.md %}{%- endcapture %}
-{{ code-blocks | markdownify }}
+            <div class="_layout _article_layout">{%- capture code-blocks %}{%- include test_code-blocks.md %}{%- endcapture %}{{ code-blocks | markdownify }}
             </div>
           </article>
           <footer class="_footer">
@@ -64,12 +64,12 @@ description: Code block samples.
         </div>
       </main>
       <aside class="_view _topbar_view">
-        <div class="_topbar_layout _layout container-lg px-3">
+        <div class="_layout _topbar_layout container-lg px-3">
 {% include theme_switch.html %}
         </div>
       </aside>
       <aside class="_view _lowbar_view">
-        <div class="_lowbar_layout _layout container-lg px-3">
+        <div class="_layout _lowbar_layout container-lg px-3">
 {% include copyright.html %}
 {% include credit.html %}
         </div>
