--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ description: A theme development project.
 ---
 <!DOCTYPE html>
 <html class="_prime_layout no_js" lang="en-US">
-<!-- path        : index.html -->
+<!-- path        : {{ page.path }} -->
 <!-- layout      : {{ page.layout }} -->
 <!-- source      : _source/_layouts/prime.pug -->
 <!-- title       : {{ page.title | default: "(untitled)" }} -->
