--- a/prime/test_code-blocks.html
+++ b/prime/test_code-blocks.html
@@ -7,7 +7,7 @@ description: Code block samples.
 ---
 <!DOCTYPE html>
 <html class="_prime_layout no_js" lang="en-US">
-<!-- path        : prime/test_code-blocks.html -->
+<!-- path        : {{ page.path }} -->
 <!-- layout      : {{ page.layout }} -->
 <!-- source      : _source/_layouts/prime.pug -->
 <!-- title       : {{ page.title | default: "(untitled)" }} -->
