--- a/test_pug.html
+++ b/test_pug.html
@@ -8,7 +8,7 @@ description: Testing something here.
 ---
 <!DOCTYPE html>
 <html class="_prime_layout no_js" lang="en-US">
-<!-- path        : test_pug.html -->
+<!-- path        : {{ page.path }} -->
 <!-- layout      : {{ page.layout }} -->
 <!-- source      : _source/_layouts/prime.pug -->
 <!-- title       : {{ page.title | default: "(untitled)" }} -->
