--- a/core/test_colors.html
+++ b/core/test_colors.html
@@ -7,7 +7,7 @@ description: Color samples.
 ---
 <!DOCTYPE html>
 <html class="_core_layout no_js" lang="en-US">
-<!-- path        : core/test_colors.html -->
+<!-- path        : {{ page.path }} -->
 <!-- layout      : {{ page.layout }} -->
 <!-- source      : _source/_layouts/core.pug -->
 <!-- title       : {{ page.title | default: "(untitled)" }} -->
