--- a/mallet/index.html
+++ b/mallet/index.html
@@ -7,7 +7,7 @@ description: Mallet is a Jekyll theme for GitHub Pages.
 ---
 <!DOCTYPE html>
 <html class="_mallet_layout no_js" lang="en-US">
-<!-- path        : mallet/index.html -->
+<!-- path        : {{ page.path }} -->
 <!-- layout      : {{ page.layout }} -->
 <!-- source      : _source/_layouts/mallet.pug -->
 <!-- title       : {{ page.title | default: "(untitled)" }} -->
